workspace = { members = [".", "entity", "infrastructure", "migration", "infrastructure", "api"] }
[package]
name = "swimtimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = "0.7.10"
entity = { path = "entity" }
migration = { path = "migration" }
infrastructure = { path = "infrastructure" }
api = { path = "api" }

[dev-dependencies]
sea-orm = { version = "0.12", features = ["sqlx-sqlite"] }
