workspace = { members = [".", "entity", "repository", "migration", "api"] }
[package]
name = "swimtimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = "0.7.10"
entity = { path = "entity" }
migration = { path = "migration" }
repository = { path = "repository" }
api = { path = "api" }
dotenv = "0.15.0"
shuttle-runtime = "0.36.0"
shuttle-axum = "0.36.0"
shuttle-secrets = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
sqlx = {version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
env_logger = "0.10.2"

[dev-dependencies]
sea-orm = { version = "0.12", features = ["sqlx-sqlite"] }
