[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repository = { path = "../repository" }
tokio = { version = "1.29", features = ["full"] }
axum = "0.7.4"
axum-macros = "0.4.1"
hyper = "1.1"
async-graphql-axum = "7.0.0"
async-graphql = "7.0.0"
entity = { path = "../entity" }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12" }