[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repository = { path = "../repository" }
tokio = { version = "1.29", features = ["full"] }
axum = "0.7.4"
axum-macros = "0.4.1"
hyper = "1.1"
tower-http = { version = "0.5.0", features = ["cors"] }
async-graphql-axum = "7.0.0"
async-graphql = {version = "7.0.0", features = ["log"]}
entity = { path = "../entity" }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12" }
log = "0.4.20"
reqwest = {version = "0.11.23", features = ["blocking", "json"]}
jsonwebtoken = "9"
async-trait = "0.1.77"